# BranchForge

./: .gitignore  BehaviorTreeXML.md  CLAUDE.md  CMakeLists.txt  CMakeLists_simple.txt  README.md  TESTING_STRATEGY.md  branchforge_dev_plan.md  branchforge_marketing_plan.md  check_xml.sh  package.xml  resources.qrc  run_branchforge.sh  test_app.sh  test_xml_export  test_xml_export.cpp
.github/workflows/: README.md  ci.yml  core-tests.yml  minimal-test.yml  pr-check.yml  test.yml
include/charting/: ChartDataManager.h
include/core/: Application.h
include/editor/: NodeGraphicsItem.h
include/monitoring/: BTExecutionMonitor.h
include/nodes/: AdvancedNodeSystem.h
include/project/: BTSerializer.h  BehaviorTreeXML.h  CodeGenerator.h  ProjectManager.h
include/recording/: DataRecorder.h
include/ros2/: ROS2Interface.h  ROS2TopicBrowser.h
include/ui/: DockableMainWindow.h  MainWindow.h
include/ui/modules/: ProjectExplorer.h
include/visualization/: SensorDataPipeline.h
install/: local_setup.sh  setup.sh
install/branchforge/share/branchforge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_test
qml/: main.qml  main_simple.qml
qml/components/: AboutDialog.qml  ChartPanel.qml  CodeGenDialog.qml  DockablePanel.qml  LidarScanPanel.qml  NodeEditor.qml  NodeLibraryPanel.qml  ProjectExplorer.qml  PropertiesPanel.qml  ResizeHandle.qml  SimpleNodeEditor.qml  SimpleNodeLibrary.qml  SimpleProjectExplorer.qml  SimpleProperties.qml
src/: main.cpp  main_enhanced.cpp  main_enhanced_fixed.cpp  main_simple.cpp
src/charting/: ChartDataManager.cpp
src/core/: Application.cpp
src/editor/: BehaviorTreeEditor.cpp  NodeGraphicsItem.cpp
src/monitoring/: BTExecutionMonitor.cpp
src/nodes/: AdvancedNodeSystem.cpp
src/project/: BTSerializer.cpp  BehaviorTreeXML.cpp  CodeGenerator.cpp  ProjectManager.cpp
src/recording/: DataRecorder.cpp
src/ros2/: ROS2Interface.cpp  ROS2TopicBrowser.cpp
src/ui/: DockableMainWindow.cpp  MainWindow.cpp
src/ui/modules/: NodeLibrary.cpp  ProjectExplorer.cpp  PropertiesInspector.cpp
src/visualization/: SensorDataPipeline.cpp
tests/: CMakeLists.txt
tests/data/: complex_tree.xml  invalid_tree.xml  sample_tree.xml
tests/integration/: CMakeLists.txt  test_visual_to_code_pipeline.cpp
tests/unit/: CMakeLists.txt
tests/unit/core/: test_application.cpp
tests/unit/project/: test_behavior_tree_xml.cpp  test_bt_serializer.cpp  test_code_generator.cpp  test_project_manager.cpp
