<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="xml" ?>
<package format="3">
  <name>branchforge</name>
  <version>0.1.0</version>
  <description>BranchForge - ROS2 Behaviour Tree management and testing tool</description>
  <maintainer email="maintainer@branchforge.org">BranchForge Maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>

  <build_depend>qt6-base-dev</build_depend>
  <build_depend>qt6-declarative-dev</build_depend>
  <build_depend>qt6-quick3d-dev</build_depend>

  <exec_depend>qt6-base</exec_depend>
  <exec_depend>qt6-declarative</exec_depend>
  <exec_depend>qt6-quick3d</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>